--- a/code-generator/.gitignore
+++ b/code-generator/.gitignore
@@ -1,7 +1,58 @@
-# Ignore Gradle project-specific cache directory
+ancestor_js
+*.wtns
+*.r1cs
+*.sym
+*.zkey
+powersOfTau28_hez_final_16.ptau
+proof.json
+public.json
+input_tree.json
+generated*
 .gradle
+**/build/
+**/bin/
+!src/**/build/
 
-# Ignore Gradle build output directory
-build
-**/build
-**/bin
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
+
+# Cache of project
+.gradletasknamecache
+
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+.idea
