Add branch to CI/CD

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+      - circom-testing
   pull_request:
     branches:
       - main
+      - circom-testing
 
 jobs:
   build-and-test:
